# git-scanline

./: .editorconfig  .env.example  .git-scanline.example.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SUPPORT.md  ZORP.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_task.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md  architecture.md
docs/node/: architecture.md
docs/rust/: architecture.md
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: types.ts
node/src/analyzers/: bug-correlation.ts  burst-detector.ts  churn.ts  commit-quality.ts  coupling.ts  revert-tracker.ts  security-check.ts
node/src/filters/: file-filter.ts
node/src/git/: blame-analyzer.ts  diff-parser.ts  log-parser.ts
node/src/reporters/: html.ts  json.ts  terminal.ts  zorp-animation.ts
node/src/scoring/: hotspot-scorer.ts
node/tests/: integration.test.ts
rust/: Cargo.toml
rust/src/: filters.rs  main.rs  types.rs
rust/src/analyzers/: blame.rs  burst_detector.rs  commit_quality.rs  revert_tracker.rs  security.rs
rust/src/git/: diff_parser.rs  log_parser.rs  mod.rs
scripts/: build-targets.sh  test.sh
src/: animation.rs  config.rs  filters.rs  main.rs  scoring.rs  types.rs
src/analyzers/: blame.rs  bug_correlation.rs  burst_detector.rs  churn.rs  commit_quality.rs  coupling.rs  mod.rs  revert_tracker.rs  security.rs
src/git/: log_parser.rs
src/reporters/: html.rs  json.rs  terminal.rs
(+3 files in other folders)
